erDiagram
  brands ||--o{ franchise_centers : owns
  brands ||--o{ client_error_reports : tags
  brands ||--o{ access_audit_logs : tags
  brands ||--o{ auth_audit_logs : tags
  brands ||--o{ programs : defines
  brands ||--o{ students : owns
  brands ||--o{ leads : captures
  brands ||--o{ franchise_inquiries : receives
  brands ||--o{ platform_brand_signups : provisions
  franchise_centers ||--o{ student_enrollments : manages
  franchise_centers ||--o{ leads : assigned
  students ||--o{ student_enrollments : has
  students }o--o| leads : source_lead
  student_enrollments }o--|| curriculum_versions : pinned_to
  programs ||--o{ curriculum_versions : versions
  curriculum_versions ||--o{ levels : contains
  levels ||--o{ modules : contains
  modules ||--o{ lessons : contains
  franchise_centers ||--o{ batches : runs
  batches ||--o{ batch_enrollments : contains
  students ||--o{ batch_enrollments : attends
  franchise_centers ||--o{ invoices : bills
  students ||--o{ invoices : receives
  brands ||--o{ royalty_rules : defines
  brands ||--o{ domain_mappings : maps
  leads ||--o{ lead_events : timeline
  leads ||--o{ lead_assignment_history : reassignments
  brands ||--o{ merchandise_catalog : defines
  merchandise_catalog ||--o{ merchandise_catalog_programs : ties
  programs ||--o{ merchandise_catalog_programs : supplies
  levels ||--o{ merchandise_catalog_programs : tags
  franchise_centers ||--o{ merchandise_orders : places
  brands ||--o{ brand_campaigns : runs
  brands ||--o{ brand_competitions : hosts
  brand_competitions ||--o{ brand_competition_questions : snapshots
  programs ||--o{ competition_question_bank : banks
  levels ||--o{ competition_question_bank : tags
  students ||--o{ student_competition_attempts : takes
